almost the theme , creating mouse pointer starting soon

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Platia Bootstrap Template</title>
+  <title>Farsha Events And Caterings</title>
+  <link rel="icon" href="assets/img/tab.png" type="image/logo">
   <meta name="description" content="">
   <meta name="keywords" content="">
-
+  <link rel="icon" href="assets/img/tab.png" type="image/logo">
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -223,12 +223,12 @@
     <div class="topbar d-flex align-items-center dark-background">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">contact@example.com</a></i>
-          <i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 5589 55488 55</span></i>
+          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:farshaeventandcatering@gmail.com">farshaeventandcatering@gmail.com</a></i>
+          <i class="bi bi-phone d-flex align-items-center ms-4"><a href="tel:9562462115"><span>+91 95624 62115</span></a></i>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
           <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.instagram.com/farsha_event/" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
         </div>
       </div>
     </div><!-- End Top Bar -->
@@ -238,35 +238,19 @@
       <div class="container position-relative d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center">
           <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="assets/img/logo.webp" alt=""> -->
-          <h1 class="sitename">Platia</h1>
+          <img class="icon-nav" src="assets/img/tab.png" alt="">
+          <!-- <h1 class="sitename">Platia</h1> -->
         </a>
 
         <nav id="navmenu" class="navmenu">
           <ul>
             <li><a href="#hero" class="active">Home</a></li>
+            <li><a href="#services" class="active">Services</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#menu">Menu</a></li>
-            <li><a href="#book-a-table">Book a Table</a></li>
-            <li><a href="#chefs">Chefs</a></li>
-            <li><a href="#events">Events</a></li>
-            <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-              <ul>
-                <li><a href="#">Dropdown 1</a></li>
-                <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                  <ul>
-                    <li><a href="#">Deep Dropdown 1</a></li>
-                    <li><a href="#">Deep Dropdown 2</a></li>
-                    <li><a href="#">Deep Dropdown 3</a></li>
-                    <li><a href="#">Deep Dropdown 4</a></li>
-                    <li><a href="#">Deep Dropdown 5</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Dropdown 2</a></li>
-                <li><a href="#">Dropdown 3</a></li>
-                <li><a href="#">Dropdown 4</a></li>
-              </ul>
-            </li>
+            <li><a href="#book-a-event">Plan my event</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="#gallery">Gallery</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -1243,145 +1227,8 @@
 
     </section><!-- /Testimonials Section -->
 
-    <!-- Chefs Section -->
-    <section id="chefs" class="chefs section">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <span class="description-title">Meet our team</span>
-        <h2>Officials</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="featured-chef row align-items-center g-4" data-aos="fade-up" data-aos-delay="150">
-          <div class="col-lg-5">
-            <figure class="chef-photo m-0">
-              <img src="assets/img/restaurant/chef-4.webp" alt="Executive chef portrait" class="img-fluid">
-              <div class="badge-overlay">
-                <span class="pill text-black"><i class="bi bi-star-fill me-1"></i> Michelin Mention</span>
-              </div>
-            </figure>
-          </div>
-
-          <div class="col-lg-7">
-            <div class="chef-content">
-              <div class="topline d-inline-flex align-items-center mb-2">
-                <i class="bi bi-patch-check-fill me-2"></i>
-                <span>Featured Chef</span>
-              </div>
-              <h3 class="name">Avery Montrose</h3>
-              <p class="role mb-3">Executive Chef</p>
-              <p class="bio mb-4">Curabitur convallis lectus a sapien dictum, sed posuere urna fermentum. Maecenas sodales, neque non pretium ultrices, lacus nibh finibus mi, non vulputate arcu quam at nisl.</p>
-
-              <ul class="awards list-unstyled d-flex flex-wrap gap-2 mb-4">
-                <li class="award-badge"><i class="bi bi-award me-1"></i> Gourmand Trophy 2022</li>
-                <li class="award-badge"><i class="bi bi-bookmark-star me-1"></i> Le Cordon Bleu Honors</li>
-                <li class="award-badge"><i class="bi bi-trophy me-1"></i> City Best Tasting Menu</li>
-              </ul>
-
-              <div class="signature">
-                <img src="assets/img/misc/signature-1.png" alt="Chef signature" class="img-fluid">
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row g-4 team-grid mt-2">
-
-          <div class="col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="200">
-            <article class="chef-card h-100">
-              <div class="image-wrapper">
-                <img src="assets/img/restaurant/chef-1.webp" alt="Sous chef portrait" class="img-fluid" loading="lazy">
-                <ul class="social list-unstyled m-0">
-                  <li><a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a></li>
-                  <li><a href="#" aria-label="Twitter"><i class="bi bi-twitter-x"></i></a></li>
-                  <li><a href="#" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a></li>
-                </ul>
-              </div>
-              <div class="content p-3">
-                <h4 class="name mb-1">Jordan Lee</h4>
-                <p class="role mb-2">Sous Chef</p>
-                <p class="excerpt mb-3">Donec feugiat, arcu non pulvinar posuere, risus libero cursus nibh, sed dictum nibh arcu non augue.</p>
-                <div class="badges d-flex flex-wrap gap-2">
-                  <span class="mini-badge"><i class="bi bi-award me-1"></i> Street Food Fest</span>
-                </div>
-              </div>
-            </article>
-          </div><!-- End Chef Card -->
-
-          <div class="col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="250">
-            <article class="chef-card h-100">
-              <div class="image-wrapper">
-                <img src="assets/img/restaurant/chef-6.webp" alt="Pastry chef portrait" class="img-fluid" loading="lazy">
-                <ul class="social list-unstyled m-0">
-                  <li><a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a></li>
-                  <li><a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a></li>
-                  <li><a href="#" aria-label="Pinterest"><i class="bi bi-pinterest"></i></a></li>
-                </ul>
-              </div>
-              <div class="content p-3">
-                <h4 class="name mb-1">Mila Santos</h4>
-                <p class="role mb-2">Pastry Chef</p>
-                <p class="excerpt mb-3">Integer aliquet, urna et commodo gravida, libero lacus aliquam velit, vitae iaculis sem velit in purus.</p>
-                <div class="badges d-flex flex-wrap gap-2">
-                  <span class="mini-badge"><i class="bi bi-egg-fried me-1"></i> Cocoa Summit</span>
-                </div>
-              </div>
-            </article>
-          </div><!-- End Chef Card -->
-
-          <div class="col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="300">
-            <article class="chef-card h-100">
-              <div class="image-wrapper">
-                <img src="assets/img/restaurant/chef-8.webp" alt="Grill chef portrait" class="img-fluid" loading="lazy">
-                <ul class="social list-unstyled m-0">
-                  <li><a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a></li>
-                  <li><a href="#" aria-label="TikTok"><i class="bi bi-tiktok"></i></a></li>
-                  <li><a href="#" aria-label="YouTube"><i class="bi bi-youtube"></i></a></li>
-                </ul>
-              </div>
-              <div class="content p-3">
-                <h4 class="name mb-1">Kai Thompson</h4>
-                <p class="role mb-2">Grill Master</p>
-                <p class="excerpt mb-3">Pellentesque dapibus, nibh id pharetra interdum, risus est vehicula lectus, non iaculis velit elit ut felis.</p>
-                <div class="badges d-flex flex-wrap gap-2">
-                  <span class="mini-badge"><i class="bi bi-fire me-1"></i> Smoke-Off Winner</span>
-                </div>
-              </div>
-            </article>
-          </div><!-- End Chef Card -->
-
-          <div class="col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="350">
-            <article class="chef-card h-100">
-              <div class="image-wrapper">
-                <img src="assets/img/restaurant/chef-3.webp" alt="Line cook portrait" class="img-fluid" loading="lazy">
-                <ul class="social list-unstyled m-0">
-                  <li><a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a></li>
-                  <li><a href="#" aria-label="Twitter"><i class="bi bi-twitter-x"></i></a></li>
-                  <li><a href="#" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a></li>
-                </ul>
-              </div>
-              <div class="content p-3">
-                <h4 class="name mb-1">Renee Collins</h4>
-                <p class="role mb-2">Line Cook</p>
-                <p class="excerpt mb-3">Vestibulum congue, justo eget ultricies posuere, erat nunc viverra arcu, vitae cursus arcu nunc at erat.</p>
-                <div class="badges d-flex flex-wrap gap-2">
-                  <span class="mini-badge"><i class="bi bi-emoji-smile me-1"></i> Guest Favorite</span>
-                </div>
-              </div>
-            </article>
-          </div><!-- End Chef Card -->
-
-        </div>
-
-      </div>
-
-    </section><!-- /Chefs Section -->
-
     <!-- Book A Table Section -->
-    <section id="book-a-table" class="book-a-table section light-background">
+    <section id="book-a-event" class="book-a-table section light-background">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -1525,79 +1372,43 @@
 
     </section><!-- /Book A Table Section -->
 
-    <!-- Location Section -->
-    <section id="location" class="location section">
+
+    <!-- Chefs Section -->
+    <section id="team" class="chefs section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <span class="description-title">Meet our team</span>
+        <h2>Officials</h2>
+        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+      </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <div class="row g-4">
-          <div class="col-lg-6" data-aos="fade-right" data-aos-delay="200">
-            <div class="map-container">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.684949335945!2d-73.98658242357565!3d40.75853057126168!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDDCsDQ1JzMwLjciTiA3M8KwNTknMDcuNyJX!5e0!3m2!1sen!2sus!4v1654321234567!5m2!1sen!2sus" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+        <div class="featured-chef row align-items-center g-4" data-aos="fade-up" data-aos-delay="150">
+          <div class="col-lg-6 col-12">
+            <figure class="chef-photo m-0">
+              <img src="assets/img/restaurant/chef-4.webp" alt="Executive chef portrait" class="img-fluid">
+              <div class="badge-overlay">
+                <span class="pill text-black"><i class="bi bi-star-fill me-1"></i> Michelin Mention</span>
+              </div>
+            </figure>
           </div>
-
-          <div class="col-lg-6" data-aos="fade-left" data-aos-delay="200">
-            <div class="info-container">
-              <div class="section-header">
-                <h2>Find Us</h2>
-                <p>Visit Us Today</p>
+          <div class="col-lg-6 col-12">
+            <figure class="chef-photo m-0">
+              <img src="assets/img/restaurant/chef-4.webp" alt="Executive chef portrait" class="img-fluid">
+              <div class="badge-overlay">
+                <span class="pill text-black"><i class="bi bi-star-fill me-1"></i> Michelin Mention</span>
               </div>
-
-              <div class="info-card" data-aos="fade-up" data-aos-delay="300">
-                <div class="info-icon">
-                  <i class="bi bi-geo-alt"></i>
-                </div>
-                <div class="info-content">
-                  <h3>Our Location</h3>
-                  <p>123 Culinary Avenue, Manhattan, NY 10001</p>
-                </div>
-              </div>
-
-              <div class="info-card" data-aos="fade-up" data-aos-delay="400">
-                <div class="info-icon">
-                  <i class="bi bi-telephone"></i>
-                </div>
-                <div class="info-content">
-                  <h3>Reservations</h3>
-                  <p>+1 (212) 555-7890</p>
-                  <p class="small-text">We recommend making reservations at least 48 hours in advance</p>
-                </div>
-              </div>
-
-              <div class="info-card" data-aos="fade-up" data-aos-delay="500">
-                <div class="info-icon">
-                  <i class="bi bi-clock"></i>
-                </div>
-                <div class="info-content">
-                  <h3>Hours</h3>
-                  <div class="hours-grid">
-                    <div class="day">Monday - Thursday</div>
-                    <div class="time">11:00 AM - 10:00 PM</div>
-
-                    <div class="day">Friday - Saturday</div>
-                    <div class="time">11:00 AM - 11:30 PM</div>
-
-                    <div class="day">Sunday</div>
-                    <div class="time">10:00 AM - 9:00 PM</div>
-
-                    <div class="day">Brunch Hours</div>
-                    <div class="time">Sat &amp; Sun, 10:00 AM - 2:00 PM</div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="cta-wrapper" data-aos="fade-up" data-aos-delay="600">
-                <a href="#" class="btn-book">Make a Reservation</a>
-                <a href="#" class="btn-contact">Contact Us</a>
-              </div>
-            </div>
+            </figure>
           </div>
         </div>
 
       </div>
 
-    </section><!-- /Location Section -->
+    </section><!-- /Chefs Section -->
+
+    
 
    
 
