the conents in the services has been shorted

--- a/index.html
+++ b/index.html
@@ -129,77 +129,76 @@
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
+<div class="row g-4">
 
-        <div class="row g-4">
+  <!-- Service Card 1 -->
+  <div class="col-lg-6 col-xl-4 col-6" data-aos="zoom-in" data-aos-delay="150">
+    <div class="service-card">
+      <div class="service-icon">
+        <i class="bi bi-list-check"></i>
+      </div>
+      <h4>Event Planning & Coordination</h4>
+      <p>Seamless planning with smooth, stress-free execution.</p>
+    </div>
+  </div>
 
-          <!-- Service Card 1 -->
-          <div class="col-lg-6 col-xl-4 col-6" data-aos="zoom-in" data-aos-delay="150">
-            <div class="service-card">
-              <div class="service-icon">
-                <i class="bi bi-list-check"></i>
-              </div>
-              <h4>Event Planning & Coordination</h4>
-              <p>We handle everything—from concept to completion. Farsha™ ensures a smooth, stress-free event with perfect timing, flawless arrangements, and expert coordination.</p>
-            </div>
-          </div>
+  <!-- Service Card 2 -->
+  <div class="col-lg-6 col-xl-4 col-6" data-aos="zoom-in" data-aos-delay="200">
+    <div class="service-card">
+      <div class="service-icon">
+        <i class="bi bi-cake2"></i>
+      </div>
+      <h4>Wedding Catering & Hospitality</h4>
+      <p>Elegant wedding menus with warm hospitality.</p>
+    </div>
+  </div>
 
-          <!-- Service Card 2 -->
-          <div class="col-lg-6 col-xl-4 col-6" data-aos="zoom-in" data-aos-delay="200">
-            <div class="service-card">
-              <div class="service-icon">
-                <i class="bi bi-cake2"></i>
-              </div>
-              <h4>Wedding Catering & Hospitality</h4>
-              <p>Celebrate your big day with flavours crafted to perfection. Our customized wedding menus, elegant serving style, and warm hospitality create an unforgettable dining experience.</p>
-            </div>
-          </div>
+  <!-- Service Card 3 -->
+  <div class="col-lg-6 col-xl-4 col-6" data-aos="zoom-in" data-aos-delay="250">
+    <div class="service-card">
+      <div class="service-icon">
+        <i class="bi bi-brightness-high"></i>
+      </div>
+      <h4>Stage, Lighting & Ambience</h4>
+      <p>Stunning stage designs and immersive lighting.</p>
+    </div>
+  </div>
 
-          <!-- Service Card 3 -->
-          <div class="col-lg-6 col-xl-4 col-6" data-aos="zoom-in" data-aos-delay="250">
-            <div class="service-card">
-              <div class="service-icon">
-                <i class="bi bi-brightness-high"></i>
-              </div>
-              <h4>Stage, Lighting & Ambience Design</h4>
-              <p>From dramatic lighting to stunning stage setups, we create the atmosphere your celebration deserves—elegant, immersive, and picture-perfect.</p>
-            </div>
-          </div>
+  <!-- Service Card 4 -->
+  <div class="col-lg-6 col-xl-4 col-6" data-aos="zoom-in" data-aos-delay="300">
+    <div class="service-card">
+      <div class="service-icon">
+        <i class="bi bi-flower1"></i>
+      </div>
+      <h4>Custom Décor & Themes</h4>
+      <p>Creative décor crafted to match your vision.</p>
+    </div>
+  </div>
 
-          <!-- Service Card 4 -->
-          <div class="col-lg-6 col-xl-4 col-6" data-aos= zoom-in data-aos-delay="300">
-            <div class="service-card">
-              <div class="service-icon">
-                <i class="bi bi-flower1"></i>
-              </div>
-              <h4>Custom Décor & Theme Creations</h4>
-              <p>Every event should feel magical. Our décor specialists transform any venue with themes, colours, and details that match your vision beautifully.</p>
-            </div>
-          </div>
+  <!-- Service Card 5 -->
+  <div class="col-lg-6 col-xl-4 col-6" data-aos="zoom-in" data-aos-delay="350">
+    <div class="service-card">
+      <div class="service-icon">
+        <i class="bi bi-cone-striped"></i>
+      </div>
+      <h4>Festive & Traditional Catering</h4>
+      <p>Authentic festive menus for special occasions.</p>
+    </div>
+  </div>
 
-          <!-- Service Card 5 -->
-          <div class="col-lg-6 col-xl-4 col-6" data-aos="zoom-in" data-aos-delay="350">
-            <div class="service-card">
-              <div class="service-icon">
-                <i class="bi bi-cone-striped"></i>
-              </div>
-              <h4>Festive & Traditional Catering</h4>
-              <p>Be it Eid, Onam, or any special celebration, our festive menus bring authentic flavours, freshness, and richness to your special gatherings.</p>
-            </div>
-          </div>
+  <!-- Service Card 6 -->
+  <div class="col-lg-6 col-xl-4 col-6" data-aos="zoom-in" data-aos-delay="500">
+    <div class="service-card">
+      <div class="service-icon">
+        <i class="bi bi-people"></i>
+      </div>
+      <h4>Full Crew & Management</h4>
+      <p>Professional event crew handling every detail.</p>
+    </div>
+  </div>
 
+</div>
 
-          <!-- Service Card 8 -->
-          <div class="col-lg-6 col-xl-4 col-6" data-aos="zoom-in" data-aos-delay="500">
-            <div class="service-card">
-              <div class="service-icon">
-                <i class="bi bi-people"></i>
-              </div>
-              <h4>Full Crew & Event Management Team</h4>
-              <p>Our trained professionals manage everything on the ground—serving, coordination, backstage support, logistics, guest handling, and more—so you can relax and enjoy your event.</p>
-            </div>
-          </div>
-
-        </div>
 
       </div>
 
@@ -337,7 +336,7 @@
               <ul class="trust-list">
                 <li><i class="bi bi-check-circle-fill"></i> Verified by 500+ satisfied clients</li>
                 <li><i class="bi bi-check-circle-fill"></i> ISO certified event management</li>
-                <li><i class="bi bi-check-circle-fill"></i> FSSSA registered catering team</li>
+                <li><i class="bi bi-check-circle-fill"></i> FSSAI registered catering team</li>
                 <li><i class="bi bi-check-circle-fill"></i> Professional insurance coverage</li>
               </ul>
             </div>
