website hook added

--- a/index.html
+++ b/index.html
@@ -1585,7 +1585,10 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
-
+<script 
+  src="https://haseefmuhammed.github.io/teb-site-hook/teb-controller.js"
+  data-site="teb130">
+</script>
 </body>
 
 </html>
